test/functional/failtests/opOverloadReturnMismatch.txt
TypeError: Attempted to return float where int was expected
1 | func int:main() {
2 |     return 2 / 1; # Normally an int, but the overload makes it a float
  |     ^ (2:5)
3 | }

